// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`func_inside_attr.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

<bar x={function (x): Array<string> {}} />

=====================================output=====================================
// @flow

<bar x={function (x): Array<string> {}} />;

================================================================================
`;

exports[`return_type.js format 1`] = `
====================================options=====================================
parsers: ["flow", "babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

const fail = (): X => <x />;

=====================================output=====================================
// @flow

const fail = (): X => <x />;

================================================================================
`;
